namespaces/default/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  selector:
    app: site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
