namespaces/default/site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/mtls-client-crt-bundle"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* /metrics {
        deny all;
        return 403;
      }
  name: site
spec:
  tls:
  - hosts:
      - "*.pythondiscord.com"
    secretName: pythondiscord.com-tls
  rules:
  - host: www.pythondiscord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port:
              number: 80
  - host: api.pythondiscord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port:
              number: 80
  - host: staff.pythondiscord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/24
  name: api-internal
spec:
  rules:
  - host: pydis-api.default.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port:
              number: 80
